--- a/naturet/package.json
+++ b/naturet/package.json
@@ -9,10 +9,14 @@
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^6.2.0",
     "express": "~4.16.0",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "mongoose": "^5.4.7",
     "morgan": "~1.9.0",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0"
   }
 }
