--- a/naturet/package.json
+++ b/naturet/package.json
@@ -18,6 +18,7 @@
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.2",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
