--- a/naturet/package.json
+++ b/naturet/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.0",
+    "cloudinary": "^1.13.2",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -19,6 +20,7 @@
     "mongoose": "^5.2.2",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
+    "multer-storage-cloudinary": "^2.2.1",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
