--- a/naturet/package.json
+++ b/naturet/package.json
@@ -7,6 +7,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.2.5",
     "bcrypt": "^3.0.0",
     "cloudinary": "^1.13.2",
     "connect-mongo": "^2.0.3",
