--- a/naturet/package.json
+++ b/naturet/package.json
@@ -26,7 +26,8 @@
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "stripe": "^6.23.1"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
