--- a/naturet/.gitignore
+++ b/naturet/.gitignore
@@ -35,6 +35,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+public/not-in-use/
 
 # Typescript v1 declaration files
 typings/
